# movie_flask

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: app.py  schema.py
